[package]
name = "god-db"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
env_logger = "0.10.1"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.132"
futures = "0.3.30"
tokio = { version = "1.35.1", features = ["full"] }
tokio-serde = { version = "0.8.0", features = ["bincode"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
omnipaxos = { git = "https://github.com/haraldng/omnipaxos.git", features = ["serde", "toml_config"] }
omnipaxos_storage = { git = "https://github.com/haraldng/omnipaxos.git" }
toml = "0.8.19"
chrono = "0.4.34"
rand = "0.8.5"
csv = "1.3.1"
tokio-postgres = "0.7.13"
deadpool-postgres = "0.14.1"
dotenv = "0.15"
clap = {version = "4.0", features = ["derive"]}
postgres-types = "0.2.9"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "cli"
path = "src/cli/main.rs"
